--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-python-telegram-bot>=20.0
-Pillow>=9.0.0
-httpx>=0.24.0
-python-dotenv>=1.0.0
-inference-sdk>=1.0.0
+python-dotenv==1.1.1
+python-telegram-bot==22.3
+httpx==0.28.1
+Pillow==11.3.0
+inference-sdk==0.52.0
